$Id$

NOTE: This is the 1.3.X development branch.
Put code changes right below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2007)
 - 01-Nov-09 bb Extract CSS and JavaScript from access.php
 - 01-Nov-09 bb Start moving CSS files to their own subdirectory. 
 - 30-Oct-09 bb I had changed things to v1.2.0 because that's what most files showed.
   But, I think we're really working on v1.3.0 in HEAD.
 - 30-Oct-09 bb Back out Patch [ 1425442 ] case-insensitive user names
   Incomplete. Pre-existing usernames with Uppercase are not retrieved correctly.
 - 21-Oct-09 bb Updating includes/config.php and the SQL files to V1.2.0
 - 19-Oct-09 bb Patch [ 2880387 ] Viewing other user's calendar when user access cntrl is off
 - 19-Oct-09 bb Extracting CSS & Javascript from about.php to external files.
   New script file js/v_h_scrolls.js allows multiple scrollers per page.
 - 15-Oct-09 bb Remove excess styles
 - 14-Oct-09 bb Patch [ 1753426 ] layerentrys aren't marked as entrys (no hasevent class)
 - 14-Oct-09 bb Patch [ 1425442 ] case-insensitive user names
 - 12-Oct-09 bb Patch [ 2877076 ] Fix some off by one dates due to daylight saving
 - 12-Oct-09 bb Patch [ 2666115 ] Patch for bug#2666101, icalclient htaccess method
 - 12-Oct-09 bb Patch [ 2697525 ] German translation corrections
 - 12-Oct-09 bb Patch [ 2770045 ] Access.php error - You are not authorized
 - 12-Oct-09 bb Patch [ 2777127 ] Patch for bug 2318177, report options not saving/displaying
 - 12-Oct-09 bb Patch [ 2782298 ] Users selection shifts
 - 12-Oct-09 bb <script language="javascript" was deprecated years ago
 - 12-Oct-09 bb Patch [ 2794125 ] Import Categories
 - 12-Oct-09 bb Patch [ 2801019 ] Fix bug that prevent event approval
 - 11-Oct-09 bb Patch [ 2802940 ] Allow public access in http authentication mode
 - 11-Oct-09 bb Patch [ 2809120 ] Allow rejection of a previously approved event
 - 11-Oct-09 bb Patch [ 2839645 ] Bugfix for the installation when language character != UTF-8